syntax = "proto3";

import "ticket/model/model.proto";

option java_multiple_files = true;
option java_package = "com.brekhin.ticket.grpc.model";

message gRPCAddTicketRequest{
    GTicket gTicket = 1;
}

message gRPCDeleteTicketByIdRequest{
    int64 ticketId = 1;
}

message gRPCGetTicketByIdRequest{
    int64 ticketId = 1;
}
